test/negative/iface_unknown.mut
# Negative: class implements non-existent interface

class Foo : NonExistent
    def init(self)
    end
end
